--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "animate.css": "^4.1.1",
+        "wow.js": "^1.2.2"
     }
 }
